// Package keeper implements the roles module keeper.
//
// This file contains proto.Message stub implementations for internal store types.
// TODO: Replace with generated protobuf code when available.
package keeper

// Proto stub methods for paramsStore
func (*paramsStore) ProtoMessage()  {}
func (*paramsStore) Reset()         {}
func (*paramsStore) String() string { return "paramsStore" }

// Proto stub methods for roleAssignmentStore
func (*roleAssignmentStore) ProtoMessage()  {}
func (*roleAssignmentStore) Reset()         {}
func (*roleAssignmentStore) String() string { return "roleAssignmentStore" }

// Proto stub methods for accountStateStore
func (*accountStateStore) ProtoMessage()  {}
func (*accountStateStore) Reset()         {}
func (*accountStateStore) String() string { return "accountStateStore" }
